@@ -39,6 +39,10 @@
 ; by pressing Select while Mario is dying or while the Retry prompt is shown.
     !item_box_fix = 1
 
+; If 1, it fixes the bug where Mario's lives won't cap at 99 when the status bar is nuked
+; (which would show a glitched amount on the OW and Mario will have a halo).
+    !lives_overflow_fix = 1
+
 ; If 1, it removes the "Hurry up!" SFX and tempo hike effect that happens when reaching 100 seconds on the timer.
 ; If not disabled, the death song will be played when dying during the tempo hike effect (regardless of the settings), to reset the tempo of the song after respawning.
     !disable_hurry_up = 0
