@@ -1,7 +1,8 @@
 v0.3.7:
     - Fixed collected invisible 1-UPs not resetting on death, which would allow to skip some of them after respawning (when not collecting them all).
-    - Fixed scroll sprites speeds not resetting on death.
+    - Fixed scroll sprites speeds not resetting on death (thanks to LouisDoucet for reporting this).
     - Small refactor of addresses reset code on death.
+    - Added fix (optional, enabled by default) for the bug where Mario's lives don't cap at 99 when the status bar is nuked (this usually causes the Overworld to display a glitched amount and makes Mario have a halo).
 
 v0.3.6:
     - Made so the Retry prompt shows up immediately when falling in a pit and not using !fast_prompt = 1.
